--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -120,7 +120,14 @@ The ozone observed at a surface station is the net result of various physio-chem
 
 There were four main ozone episodes in Europe in 2019 that occurred around days 23-28 in each of the months April, June, July and August and at a varying degree in different parts of the continent. Extreme levels of ozone even exceeding EU's alert threshold of 240 \ug were observed in several countries as explained in more detail below.
 
-The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. At 25 April Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels.
+The April episode was linked to a blocking high pressure located over western parts of Russia and Belarus, setting up southeasterly winds bringing warm and dry continental air masses northwards particularly to the Baltic countries, Scandinavia and parts of the UK. At 25 April Northern Norway registered the second highest surface ozone level (82 ppb) since the start of the monitoring in 1990. Likely, agricultural fires in East Europe (Ukraine and Russia) contributed to the peak ozone levels. The modelled and observed daily maximum ozone levels for 24 April are shown in Figure~\ref{fig:O3_20190424}. 
+
+
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=7.5cm,viewport=105 58 510 775]{FIGS_O3/20190424_MAXO3_ModObs_emep_H500.pdf}}
+\caption{Modelled and measured daily max ozone [ppb] 24 April 2019.}
+\label{fig:O3_20190424}
+\end{figure}
 
 June 2019 was the warmest June on record, globally as well as for Europe (\citep{Bissolli:2020}). During 26-28 June a persistent high pressure over central Europe brought very hot air masses into central and western parts of the continent. In Germany, temperatures just below 40 \degrees C was observed and in France 13 stations surpassed France’s 2003 records, exceeding a temperature of 44.1 \degrees C. Surface ozone levels above EU's information threshold (180 \ug) were observed in many countries during this period. At Ispra in Italy an extreme level of 142 ppb (285 \ug) was reported on 28 June, breaking EU's alert threshold of 240 \ug. Figure~\ref{fig:O3_20190628} shows the modelled and observed daily maximum ozone levels for 28 June. 
 
