--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -73,9 +73,9 @@ In order to allow for consistent comparisons, the trend is provided as a relativ
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
+The SO$_x$ emissions has declined by more than 80\% (-4.3 \% yr$^{-1}$) within the western EMEP domain (EU27+UK+EFTA countries) the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}). On average the reductions in observations for the last 20 years (2000-2019) are -3.9, -3.2 and -3.1  \% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -5.1, -3.8 and -4.3 \% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the absolute trend is higher in observations, but within the confidence interval to the modelled trends.
 
-On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but within the confidence interval to the modelled trends. 
+
 
 The  greater decrease in \soii compared to secondary sulphate is due to a combination of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
 
@@ -115,7 +115,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              39 &          38 &          39 &                  -0.074 &  (-0.087, -0.062) & -0.065 &  (-0.076, -0.053) &                    -3.20 &  (-3.46, -2.93) & -3.81 &  (-4.04, -3.58) \\
@@ -137,7 +137,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              49 &          40 &          49 &                   -29.5 &  (-34.8, -24.2) & -48.1 &   (-56.9, -39.4) &                    -3.14 &  (-3.46, -2.82) & -4.27 &   (-4.5, -4.04) \\
@@ -185,7 +185,7 @@ In summary we find that oxidized nitrogen in air and precipitation has been decr
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              60 &          45 &          59 &                  -0.131 &    (-0.162, -0.1) & -0.191 &  (-0.235, -0.147) &                    -1.18 &  (-2.21, -0.15) & -2.25 &  (-2.42, -2.07) \\
@@ -209,7 +209,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              25 &          17 &          25 &                  -0.008 &  (-0.011, -0.005) & -0.013 &   (-0.016, -0.01) &                    -1.60 &    (-2.0, -1.2) & -2.13 &  (-2.33, -1.94) \\
@@ -231,7 +231,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              21 &          13 &          15 &                  -0.009 &  (-0.012, -0.006) & -0.014 &  (-0.018, -0.009) &                    -2.01 &  (-2.49, -1.53) & -2.53 &   (-2.86, -2.2) \\
@@ -253,7 +253,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &               6 &           4 &           6 &                  -0.002 &  (-0.004, -0.001) & -0.003 &  (-0.005, -0.002) &                    -1.94 &  (-2.77, -1.11) & -2.35 &  (-2.64, -2.07) \\
@@ -276,7 +276,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.7}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ugN $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ugN $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              46 &          21 &          44 &                   -12.1 &   (-15.7, -8.5) & -26.4 &  (-31.3, -21.4) &                    -1.36 &    (-1.74, -0.98) & -2.35 &  (-2.49, -2.21) \\
@@ -337,7 +337,7 @@ In summary, the observations and the model calculations confirms that very small
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              25 &          17 &          18 &                  -0.016 &  (-0.024, -0.007) & -0.019 &  (-0.027, -0.012) &                    -1.45 &  (-1.99, -0.91) & -1.36 &  (-1.58, -1.14) \\
@@ -359,7 +359,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              21 &          15 &          20 &                  -0.024 &  (-0.033, -0.016) & -0.021 &  (-0.028, -0.014) &                    -2.61 &  (-3.01, -2.22) & -2.61 &  (-2.79, -2.43) \\
@@ -381,7 +381,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &               8 &           2 &           6 &                   0.010 &  (-0.005, 0.024) &  0.006 &  (-0.006, 0.017) &                     1.55 &    (0.22, 2.88) &  1.54 &   (0.42, 2.66) \\
@@ -403,7 +403,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.7}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change (mg $mm^{2} yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              44 &          13 &           9 &                    -7.4 &  (-11.8, -3.0) &  -4.8 &   (-8.1, -1.5) &                    -0.31 &   (-0.99, 0.37) & -0.40 &  (-0.71, -0.09) \\
@@ -439,7 +439,7 @@ Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal observed
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              37 &          29 &          36 &                   -0.36 &  (-0.43, -0.29) & -0.29 &  (-0.32, -0.25) &                    -1.83 &  (-2.09, -1.57) & -1.95 &  (-2.11, -1.79) \\
@@ -462,7 +462,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute changes (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative changes (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Absolute change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              19 &          16 &          19 &                   -0.29 &   (-0.39, -0.2) & -0.26 &  (-0.31, -0.22) &                    -2.42 &   (-2.84, -2.0) & -2.52 &  (-2.71, -2.32) \\
@@ -482,11 +482,11 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 For the whole period, 36 and 18 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model underestimates the concentrations, but reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
 
-Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, \PM[10] concentrations decreased by 36 \%, while an even greater decrease by 48 \% is estimated for \PM[2.5] concentrations, from both observational data and model simulations. We find a good correspondence between observed and model simulated trends in PM concentrations at the considered sites. A more detailed discussion of PM trends is given below.
+Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. More detailed discussion of PM trends is given below.
 
-For the period of 2000-2019, the average observed \PM[10] trends are -0.37 \ug $yr^{-1}$, or -1.86 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.28 \ug $yr^{-1}$ and -1.91 \% $yr^{-1}$. For \PM[2.5], the average trends are -0.31 and -0.25 \ug $yr^{-1}$ respectively from the observations and model simulations, and the relative decrease of \PM[2.5] is -2.51 \% $yr^{-1}$, both observed and modelled. The reduction of anthropogenic emissions during this period is a major cause for the decreasing average concentrations of PM, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. 
+For the period of 2000-2019, the average observed \PM[10] trends are -0.36 \ug $yr^{-1}$, or -1.83 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.27 \ug $yr^{-1}$ and -1.92 \% $yr^{-1}$. For \PM[2.5], the average absolute trends are -0.29 and -0.25 \ug $yr^{-1}$ and the relative ones are -2.42 and -2.51 \% $yr^{-1}$, observed and modelled respectively. The reduction of anthropogenic emissions during this period is a major cause for the decreasing average concentrations of PM, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. Considerable changes in the annual mean PM due to an inter-annual meteorological variability also contribute to weaken estimated PM trends.
 
-Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trend values, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% interquartile range (IQR) of the observed ones. Modelled mean and median trends are in general closer to each other than in the observational data, implying more sites-outliers.} The model simulated the largest \PM[10] and \PM[2.5] 2000-2019 trends, both absolute and relative,  for the summer season, followed by the spring, whereas the observation results are less conclusive in this respect. However, both the observations and the model identify PM significant trends for more stations for the spring and summer seasons than for the winter-autumn. 
+Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trend values, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% interquartile range (IQR) of the observed ones. Modelled mean and median trends are in general closer to each other than in the observational data, implying more sites-outliers.} The observations and model simulations indicate more sites with significant trends and larger \PM[10] and \PM[2.5] average decreases for the warm seasons. For the cold seasons, when PM pollution is typically more serious, the relative decreasing trends are in general smaller, and the number of sites with non-significant trends is larger, which is especially pronounced for observed \PM[10] trends.
 
 PM is a complex pollutant, consisting of aerosol species both emitted directly and formed from gaseous precursors. Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period, was reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model). The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%.
 
@@ -495,7 +495,28 @@ PM is a complex pollutant, consisting of aerosol species both emitted directly a
 
 
 
-\section{\label{sec:Trends_O3 }Trends in O$_3$ }
+\section{\label{sec:Trends_O3}Trends in O$_3$ }
+Trend studies of surface ozone requires a somewhat different approach than other species since ambient ozone levels are the result of a baseline level with episodes on top. Additionally, in winter, NOx emissions tend to reduce ozone by titration. Thus, the selection of ozone metrics is decisive for the estimated trends (ref e.g. Lefohn - TOAR). A common procedure is to look at the trend in the probability distribution of ozone, e.g. by calculating trends for various percentiles of the distribution.  
+
+As explained above, the trends in six percentiles (10, 50, 75, 95, 98 and 99) of the daily maximum O$_3$ values were calculated for stations with at least 330 valid daily data each year. This corresponds to 90 \% data capture in the individual years. The 10th percentile corresponds to the 37th lowest daily maximum value while the 99th percentile corresponds to the 4th highest daily maximum. 
+
+Figure \ref{fig:O3_boxplot} shows the calculated trends (i.e. Sen's slopes) for these six percentiles for the period 2000-2019 for EMEP sites north and south of 49 \degrees N based on observed and modelled data. Both significant and non-significant trend values were included, but stations above 1200 m altitude were not included in the trend statistics. The reason for differing the altitude criteria for trend calculations vs that for evaluating the 2019 levels (1200 m vs 500 m) was that the latter is more focused on individual daily data whereas the trends are based on more aggregated statistics (annual data). 
+
+For both the observed and modelled data the trends show an increase in the 10th percentile and a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx (mainly seen in winter) while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
+
+Figure \ref{fig:O3_boxplot} indicates that the model overestimates the increase of the 10th percentile and overestimates the decrease of the 99 percentile for stations south of 49 \degrees N. As explained above, the relative trend values shown in Figure \ref{fig:O3_boxplot} are based on the calculated Sen's slopes and use the value of these trend lines the first year (i.e. 2000) as the reference year. 
+
+The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. 
+
+
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/O3_boxpl.png}
+	\caption{\label{fig:O3_boxplot}Boxplot of trends in annual percentiles of daily max O$_3$ from 2000-2019 for EMEP observations and model calculations for stations north (left) and south (right) of 49 \degrees N. The boxes mark the 25 and the 75 percentiles with the median given as a thin line inside. The upper whisker extends from the hinge to the highest value that is within 1.5*IQR of the hinge, where IQR is the inter-quartile range, or distance between the first and third quartiles. The lower whisker extends from the hinge to the lowest value within 1.5*IQR of the hinge. Data beyond the end of the whiskers are outliers and plotted as points. The mean values are shown as black circles. Both significant and non-significant trend values were included. Only sites below 1200 m asl and with at least 15 years of data are included.}
+\end{figure}
+
 
 
 
