--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -38,12 +38,12 @@ more detail in Sects.~\ref{sec:updateOverview}-\ref{sec:updateOther}.
 The major changes can be summarised:
 
 \begin{itemize}
-\item The default emissions system in the model was changed to a 19-sector system denoted GNFR-CAMS; -- see Sect.~\ref{ssec:gnfr}.  % c21/4
+\item The default emissions system in the model was changed to a 19-sector system denoted GNFR-CAMS -- see Sect.~\ref{ssec:gnfr}.  % c21/4
 
 \item Introduced new soil-NO, DMS and aircraft emissions, from CAMS-81 project
 (Sect.~\ref{sec:updateEmis}). 
 
-\item Modified fine/coarse split of sea-salt (Sect.~\ref{ssec:updateSS}) and particulate nitrate (ect.~\ref{sec:updateOther}).
+\item Modified fine/coarse split of sea-salt (Sect.~\ref{ssec:updateSS}) and particulate nitrate (Sect.~\ref{sec:updateOther}).
 
 \item
 Emissions speciation. New default and country-specific emission
@@ -83,7 +83,7 @@ GNFR system\footnote{
 GNFR=Gridding nomenclature for reporting/UNECE nomenclature for reporting of emissions to air,
 e.g. \citealt{CEIP2020:GNFR}}.
 In 2020 a 19-sector emission system (`GNFR\_CAMS') was implemented in the EMEP model, to take care of
-emissions provided by TNO as part of the Copernicus CAMS project \citep{Kuenen2021}. This extended emissions system
+emissions provided by TNO as part of the Copernicus CAMS project \citep{GranierCAMS2019,Kuenen2021}. This extended emissions system
 enables for example four road traffic sectors, F1--F4, with e.g. F1
  representing exhaust emissions from gasoline vehicles.
 Such emission sectors are characterised in the model by
@@ -111,7 +111,7 @@ B &      02 &   3 &  3 &   2 &  Industry  & 3, 4 \\
 C &      03 &   2 &  2 &   3 &  Other Stationary Combustion & 2 \\
 %D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
 %dev:
-D &      04 &   5 &  5 &   4 &  Fugitive & \\ %as in dev 16/8/21
+D &      04 &   5 &  5 &   4 &  Fugitive & 5 \\ %as in dev 16/8/21
 E &      05 &   6 &  2 &   5 &  Solvents & 6 \\
 F &      06 &   7 &  2 &   6 &  Road Transport & 7 \\
 G &      07 &   8 &  8 &   7 &  Shipping & 8  \\ % dev 16/8
@@ -161,22 +161,24 @@ that  0.7\% of the N-inputs are re-emitted as NO.)
 
 In developing CAMS-GLOB-SOIL , we  expressed the total soil emission fluxes as the sum
 of these terms:
+
 \begin{equation}
   \Fs = \Fb  + \Ff + \Fd + \Fp
   \label{eqn:Fs}
 \end{equation}
 
-Given that the inventories to be discussed seem to include a
-component similar to our \Ff, we hereby introduce \Fn, such that:
-\begin{equation}
-  \Fs = \Fn  + \Ff
-  \label{eqn:Fn}
-\end{equation}
+
 Where \Fn then is the sum of the \Fb, \Fd, and \Fp terms, and where the
 flux terms have units \ngN. The calculations of \Fb, \Ff, \Fd and \Fp
 are detailed in \citet{SimpsonDarras:2021}.
 Figure~\ref{fig:SIemis} illustrates the contribution of these terms for
-the European region.
+the European region. 
+%Given that some anthropogenic inventories seem to include emissions from fertilized %agricultural areas similar to our \Ff, \citet{SimpsonDarras:2021} introduced \Fn, %such that:
+%
+%\begin{equation}
+%  \Fs = \Fn  + \Ff
+%  \label{eqn:Fn}
+%\end{equation} 
 
 \begin{figure}
   \centering
