--- a/uEMEP.bib
+++ b/uEMEP.bib
@@ -26,7 +26,7 @@ DOI = {10.5194/gmd-2020-119}
 @Article{wind-2020,
 AUTHOR = {Wind, P. and Rolstad Denby, B. and Gauss, M.},
 TITLE = {Local fractions -- a method for the calculation of local source contributions to air pollution, illustrated by examples using the EMEP MSC-W model (rv4\_33)},
-JOURNAL = {Geoscientific Model Development},
+JOURNAL = gmd,
 VOLUME = {13},
 YEAR = {2020},
 NUMBER = {3},
